[package]
name = "proj"
version = "0.1.0"
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = "2.33.3"
anyhow = "1.0.38"
thiserror = "1.0.24"
async-trait = "0.1.52"
tokio = { version = "1.14.1", features = ["full"] }
futures = "0.3.21"
